cli/tests/testdata/run/event_listener_error_immediate_exit.ts.out
1
error: Uncaught Error: bar
  throw new Error("bar");
        ^
    at [WILDCARD]/event_listener_error_immediate_exit.ts:4:9[WILDCARD]
    at innerInvokeEventListeners (ext:deno_web/02_event.js:785:7)
    at invokeEventListeners (ext:deno_web/02_event.js:825:5)
    at dispatch (ext:deno_web/02_event.js:694:9)
    at dispatchEvent (ext:deno_web/02_event.js:1086:12)
    at [WILDCARD]/event_listener_error_immediate_exit.ts:11:1
